[package]
name = "actix-web-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
uuid = { version = "*", features = ["v4"] }
serde = { version = "1.0.197", features = ["derive"] }
aws-config = "1.1.5"
aws-sdk-dynamodb = "1.14.0"
env_logger = "0.11.2"
log = "0.4.20"
strum_macros = "0.26.1"
strum = { version = "0.26.1", features = ["derive"] }
derive_more = "0.99.17"
